Fix song search

--- a/src/locales/lv.json
+++ b/src/locales/lv.json
@@ -134,7 +134,7 @@
     "home": {
       "title": "Akordi",
       "buttons": {
-        "loginUnauthorized": "Turpināt"
+        "loginUnauthorized": "Ienākt"
       }
     },
     "sessionEnded": {
