--- a/src/locales/lv.json
+++ b/src/locales/lv.json
@@ -197,6 +197,7 @@
   },
   "save": "Saglabāt",
   "edit": "Rediģēt",
+  "suggestEdit": "Ieteikt labojumu",
   "delete": "Dzēst",
   "copy": "Kopēt",
   "cancel": "Atcelt",
