--- a/src/locales/lv.json
+++ b/src/locales/lv.json
@@ -209,6 +209,8 @@
     "poet": "Vārdu autors",
     "tags": "Birkas",
     "youtubeLink": "Youtube video",
+    "createdAt": "Izveidots",
+    "updatedAt": "Pēdējo reizi labots",
     "lyrics": "Dziesmas vārdi",
     "body": "Dziesmas teksts ar akordiem",
     "bodyTooltip": "Vēlams pievienot dziesmas ar pilniem dziesmu tekstiem. Teksta izkārtojumam lietot atstarpes nevis tab."
