More compact song view footer. Upgrade LxUi

--- a/src/locales/lv.json
+++ b/src/locales/lv.json
@@ -229,6 +229,7 @@
   "song": {
     "title": "Nosaukums",
     "artist": "Izpildītājs",
+    "performer": "Izpildītājs",
     "composer": "Mūzikas autors",
     "poet": "Vārdu autors",
     "tags": "Birkas",
