Plugin @vueuse/head to set meta titles and descriptions correclty. Improve titles and descriptions for song, artist and tag pages.

--- a/src/locales/lv.json
+++ b/src/locales/lv.json
@@ -5,7 +5,8 @@
     "fullName": "Akordi.lv",
     "fullNameFormatted": "Akordi.lv",
     "subheader": "Dziesmu vārdu, akordu un tabu krātuve",
-    "shortName": "Akordi"
+    "shortName": "Akordi",
+    "description": "Meklējiet akordus un dziesmu vārdus latviešu dziesmām un atrodiet tūkstošiem populāru dziesmu datubāzē."
   },
   "shell": {
     "userProfile": "Skatīt profilu",
