Add lt and ee translations

--- a/src/locales/lv.json
+++ b/src/locales/lv.json
@@ -8,25 +8,103 @@
     "shortName": "Akordi",
     "description": "Meklējiet akordus un dziesmu vārdus latviešu dziesmām un atrodiet tūkstošiem populāru dziesmu datubāzē."
   },
-  "shell": {
-    "userProfile": "Skatīt profilu",
-    "logOut": "Iziet",
-    "notifications": {
-      "logOut": "Jūsu sesija ir veiksmīgi pabeigta",
-      "agreement": "Jums ir jāpiekrīt lietošanas noteikumiem",
-      "unknownState": "Notika kļūda lietotāja statusa apstrādē",
-      "err401": "Ieejiet sistēmā, lai piekļūtu funkcionalitātei",
-      "sessionContinued": "Sesija veiksmīgi pagarināta",
-      "sessionContinuedFailed": "Sesijas pagarināšana nav izdevusies",
-      "sessionEndingSoon": "Jūsu sesija drīz beigsies"
-    },
-    "sessionExpiring": {
-      "label": "Tuvojas sesijas beigas",
-      "description": "Līdz sesijas beigām ir palikusi {count} sekunde | Līdz sesijas beigām ir palikušas {count} sekundes",
-      "descriptionMinutes": "Līdz sesijas beigām ir palikusi {count} minūte | Līdz sesijas beigām ir palikušas {count} minūtes",
-      "descriptionMinutesSmall": "un {count} sekunde | un {count} sekundes",
-      "primaryLabel": "Turpināt darbu",
-      "secondaryLabel": "Beigt darbu"
+  "lx": {
+    "shell": {
+      "defaultBack": "Atpakaļ",
+      "logOut": "Iziet",
+      "openAlerts": "Atvērt sarakstu",
+      "noAlerts": "Nav paziņojumu",
+      "openNavbar": "Atvērt izvēlni",
+      "helpTitle": "Palīdzība",
+      "alertsTitle": "Paziņojumi",
+      "languagesTitle": "Valodu izvēle",
+      "contextPersonTitle": "Saistīto personu dati",
+      "close": "Aizvērt",
+      "contextPersonsLabel": "Izvēlēties personu",
+      "contextPersonsInfoLabel": "Pacients",
+      "contextPersonsInfoTitle": "Konteksta persona",
+      "contextPersonsOwnData": "Skatīt manus datus",
+      "alternativeProfilesLabel": "Izvēlieties alternatīvu profilu",
+      "contextPersonsButtonLabel": "Konteksta personas",
+      "alternativeProfilesButtonLabel": "Alternatīvie profili",
+      "idleModalLabel": "Tuvojas sesijas beigas",
+      "idleModalPrimaryLabel": "Turpināt darbu",
+      "idleModalSecondaryLabel": "Beigt darbu",
+      "descriptionMinutes": "Līdz sesijas beigām ir palikušas {count} minūtes",
+      "descriptionMinutesSmall": "un {count} sekundes",
+      "idleDescription": "Līdz sesijas beigām ir palikušas {count} sekundes",
+      "themeTitle": "Noformējuma izvēle",
+      "themeAuto": "Automātiskais režīms",
+      "themeLight": "Gaišais režīms",
+      "themeDark": "Tumšais režīms",
+      "themeContrast": "Kontrastainais režīms",
+      "animations": "Samazināt kustības",
+      "transparency": "Samazināt caurspīdīgumu",
+      "fonts": "Iekārtas fonti",
+      "touchMode": "Skārienjūtīgs režīms",
+      "reduceMotionOff": "Nē",
+      "reduceMotionOn": "Jā",
+      "reduceTransparencyOff": "Nē",
+      "reduceTransparencyOn": "Jā",
+      "systemFontsOff": "Nē",
+      "systemFontsOn": "Jā",
+      "touchModeOff": "Nē",
+      "touchModeOn": "Jā",
+      "confirmModalSecondaryDefaultLabel": "Nē",
+      "confirmModalPrimaryDefaultLabel": "Jā",
+      "previousAlertTitle": "Iepriekšējais paziņojums",
+      "nextAlertTitle": "Nākamais paziņojums",
+      "userTitle": "Lietotājs",
+      "menu": "Izvēlne",
+      "showAllLabel": "Vairāk",
+      "megaMenuTitle": "Lietotnes",
+      "successSvgTitle": "Veiksmīgs paziņojums",
+      "warningSvgTitle": "Brīdinājums",
+      "errorSvgTitle": "Kļūda",
+      "infoSvgTitle": "Informācija",
+      "svgTitle": "Paziņojums",
+      "skipLinkLabel": "Pāriet uz lapas saturu",
+      "skipLinkTitle": "Pāriet uz lapas saturu",
+      "customButton": "Pielāgojamā poga",
+      "overflowNavItems": "Atvērt papildu izvēlni",
+      "scrollUp": "Atgriezties uz augšu",
+      "contextPersonsBirthDate": "Dzimšanas datums",
+      "settings": "Iestatījumi",
+      "contextPersonsTooltipLabel": "Konteksta persona",
+      "contextPersonsTooltipDescription": "Konteksta personas apraksts",
+      "badgeTypes": {
+        "default": "informatīvs paziņojums",
+        "info": "informatīvs paziņojums",
+        "warning": "brīdinājums",
+        "good": "sekmīgs paziņojums",
+        "important": "svarīgs paziņojums"
+      },
+      "spotlight": {
+        "label": "Lietotnes ceļvedis",
+        "close": "Aizvērt",
+        "next": "Tālāk",
+        "back": "Atpakaļ",
+        "showMore": "Uzzināt vairāk",
+        "of": "no"
+      },
+      "userProfile": "Skatīt profilu",
+      "notifications": {
+        "logoutSuccess": "Jūsu sesija ir veiksmīgi pabeigta",
+        "agreement": "Jums ir jāpiekrīt lietošanas noteikumiem",
+        "unknownState": "Notika kļūda lietotāja statusa apstrādē",
+        "err401": "Ieejiet sistēmā, lai piekļūtu funkcionalitātei",
+        "sessionContinued": "Sesija veiksmīgi pagarināta",
+        "sessionContinuedFailed": "Sesijas pagarināšana nav izdevusies",
+        "sessionEndingSoon": "Jūsu sesija drīz beigsies"
+      },
+      "sessionExpiring": {
+        "label": "Tuvojas sesijas beigas",
+        "description": "Līdz sesijas beigām ir palikusi {count} sekunde | Līdz sesijas beigām ir palikušas {count} sekundes",
+        "descriptionMinutes": "Līdz sesijas beigām ir palikusi {count} minūte | Līdz sesijas beigām ir palikušas {count} minūtes",
+        "descriptionMinutesSmall": "un {count} sekunde | un {count} sekundes",
+        "primaryLabel": "Turpināt darbu",
+        "secondaryLabel": "Beigt darbu"
+      }
     }
   },
   "greeting": {
