--- a/src/locales/ee.json
+++ b/src/locales/ee.json
@@ -117,7 +117,7 @@
   "pages": {
     "dashboard": {
       "title": "Avaleht",
-      "disclaimer": "Kogu siin leiduva sisu on mõeldud ainult õppeotstarbeks. Paljud siin leiduvaid laule on kasutajate interpretatsioonid ja võivad täpselt ei vasta originaalile. Kui siin on sinu laul ja sa ei taha, et teised seda õpiksid, või on tekkinud küsimusi või kommentaare, kirjuta info@akordid.ee."
+      "disclaimer": "Kogu siin leiduva sisu on mõeldud ainult õppeotstarbeks. Paljud siin leiduvaid laule on kasutajate interpretatsioonid ja võivad täpselt ei vasta originaalile. Kui siin on sinu laul ja sa ei taha, et teised seda õpiksid, või on tekkinud küsimusi või kommentaare, kirjuta info[at]akordi.lv."
     },
     "songs": {
       "title": "Laulude kataloog"
