--- a/src/locales/lt.json
+++ b/src/locales/lt.json
@@ -117,7 +117,7 @@
   "pages": {
     "dashboard": {
       "title": "Pradinis puslapis",
-      "disclaimer": "Visas čia esančios medžiagos yra skirtos tik mokymosi tikslams. Daugelis čia esančių dainų yra vartotojų interpretacijos ir gali tiksliai neatitikti originalo. Jei čia yra tavo daina ir nenori, kad ją mokytųsi kiti, arba turi klausimų ar komentarų, rašyk į info@akordi.lt."
+      "disclaimer": "Visas čia esančios medžiagos yra skirtos tik mokymosi tikslams. Daugelis čia esančių dainų yra vartotojų interpretacijos ir gali tiksliai neatitikti originalo. Jei čia yra tavo daina ir nenori, kad ją mokytųsi kiti, arba turi klausimų ar komentarų, rašyk į info[at]akordi.lv."
     },
     "songs": {
       "title": "Dainų katalogas"
