Remove chord render dependency. Use same rendered for ukulele and guitar chords

--- a/src/locales/ee.json
+++ b/src/locales/ee.json
@@ -156,6 +156,18 @@
     "night": "Head ööd"
   },
   "pages": {
+    "chordsLibrary": {
+      "title": "Akordide kogu",
+      "description": "Siit leiate kõik toetatud akordid.",
+      "showGuitarChords": {
+        "label": "Kitarr"
+      },
+      "showUkuleleChords": {
+        "label": "Ukulele"
+      },
+      "instrument": "Instrument",
+      "key": "Helistik"
+    },
     "dashboard": {
       "title": "Avaleht",
       "disclaimer": "Kogu siin leiduva sisu on mõeldud ainult õppeotstarbeks. Paljud siin leiduvaid laule on kasutajate interpretatsioonid ja võivad täpselt ei vasta originaalile. Kui siin on sinu laul ja sa ei taha, et teised seda õpiksid, või on tekkinud küsimusi või kommentaare, kirjuta info[at]akordi.lv."
