--- a/src/locales/lt.json
+++ b/src/locales/lt.json
@@ -156,6 +156,18 @@
     "night": "Labanaktis"
   },
   "pages": {
+    "chordsLibrary": {
+      "title": "Akordų biblioteka",
+      "description": "Čia galite rasti visus palaikomus akordus.",
+      "showGuitarChords": {
+        "label": "Gitara"
+      },
+      "showUkuleleChords": {
+        "label": "Ukulėlė"
+      },
+      "instrument": "Instrumentas",
+      "key": "Tonacija"
+    },
     "dashboard": {
       "title": "Pradinis puslapis",
       "disclaimer": "Visas čia esančios medžiagos yra skirtos tik mokymosi tikslams. Daugelis čia esančių dainų yra vartotojų interpretacijos ir gali tiksliai neatitikti originalo. Jei čia yra tavo daina ir nenori, kad ją mokytųsi kiti, arba turi klausimų ar komentarų, rašyk į info[at]akordi.lv."
