--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -159,6 +159,9 @@
       "showUkuleleChords": {
         "label": "Ukelele"
       },
+      "showBaritoneUkuleleChords": {
+        "label": "Ukelele barítono"
+      },
       "instrument": "Instrumento",
       "key": "Tono"
     },
@@ -224,6 +227,10 @@
       "showUkuleleChords": {
         "label": "Mostrar acordes de ukelele",
         "description": "Mostrar u ocultar la tablatura de acordes para ukelele"
+      },
+      "showBaritoneUkuleleChords": {
+        "label": "Mostrar acordes de ukelele barítono",
+        "description": "Mostrar u ocultar tablatura de acordes de ukelele barítono"
       },
       "transposeUp": {
         "label": "Transportar hacia arriba",
